<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.NavMainFragment">

    <TextView
        android:id="@+id/textMain"
        android:layout_width="316dp"
        android:layout_height="334dp"
        android:text="@string/main_fragment_text"
        android:textSize="34sp" />
</FrameLayout>