<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.greeting.NavGreetingFragment">

    <TextView
        android:id="@+id/textGreeting"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/greeting_fragment_text"
        android:textSize="34sp" />

</FrameLayout>